[gd_scene load_steps=5 format=2]

[ext_resource path="res://ui/WelcomeScreen.tscn" type="PackedScene" id=1]
[ext_resource path="res://ui/theme/gdscript_app_theme.tres" type="Theme" id=2]
[ext_resource path="res://ui/LoadingScreen.tscn" type="PackedScene" id=3]
[ext_resource path="res://ui/UICore.gd" type="Script" id=4]

[node name="UICore" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 2 )
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Pages" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="WelcomeScreen" parent="Pages" instance=ExtResource( 1 )]
visible = false

[node name="SettingsScreen" type="MarginContainer" parent="Pages"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0

[node name="CourseScreen" type="Control" parent="Pages"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0

[node name="LoadingScreen" parent="Pages" instance=ExtResource( 3 )]
